ransack integrated, advanced search changed

--- a/app/views/items/_orderBy.html.erb
+++ b/app/views/items/_orderBy.html.erb
@@ -4,7 +4,7 @@
                                                       :label => t("order.title")
                                                     } 
   %>
-  <%= sort_link @search, 'title', t("order.title") %>
+  <%= sort_link $search, 'title', t("order.title") %>
   <%# render :partial => "orderElement", :locals => { :key => :created_at, 
                                                       :label => t("order.date")
                                                     } 
