--- a/app/views/share/_keyword.html.erb
+++ b/app/views/share/_keyword.html.erb
@@ -1,1 +1,1 @@
-<span><%= t("searchedIn", :item => keyword, :itemType => searchItemType, :count => search_count(keyword)).html_safe %></span>
+<span><%= t("searchedIn", :item => keyword, :count => search_count(keyword)).html_safe %></span>
