--- a/app/views/users/_orderBy.html.erb
+++ b/app/views/users/_orderBy.html.erb
@@ -1,13 +1,13 @@
 <span>
   <%= t("sortBy") %> 
-  <%= render :partial => "share/sortlink", :locals => {
+  <%= render :partial => "share/search/sortlink", :locals => {
       :search => @usersearch,
       :field => 'login',
       :title => t("order.user")
     }
   %>
   ,
-  <%= render :partial => "share/sortlink", :locals => {
+  <%= render :partial => "share/search/sortlink", :locals => {
       :search => @usersearch,
       :field => 'location_city',
       :title => t("order.location")
