--- a/app/views/share/_items_given_taken.html.erb
+++ b/app/views/share/_items_given_taken.html.erb
@@ -11,7 +11,7 @@
         <%= image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count =>  resources[itemType.title.downcase.to_sym][action].size ).html_safe %>
       <% else %>
         <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => resources[itemType.title.downcase.to_sym][action].size ).html_safe, 
-            items_path( "search[item_type_id_eq]" => itemType.id, "search[need_equals]" => need)
+            items_path( "q[item_type_id_eq]" => itemType.id, "q[need_equals]" => need)
         %>
       <% end %>
     </li>
