Search field need/offer added

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -26,6 +26,8 @@
     <% end %>
   <% end %>
 <% end %>
+<div id="resource-search">
+</div>
 <% if params[:search] || @items_count %></div><% end %>
 
 <% if @user and !params[:search] %> 
