--- a/app/views/layouts/userarea.rhtml
+++ b/app/views/layouts/userarea.rhtml
@@ -5,6 +5,7 @@
     <%= render :partial => "share/userarea/usermenu", :locals => {:user => @user} %>
   </div>
   <div id="userarea" class="subcol2">
+  
     <h1 class="username">
       <%=h link_to @user.login, profile_path(@user.login) %>
       <% if @active_menuitem_l1 %>
@@ -14,7 +15,9 @@
         &raquo; <%= link_to t("#{@active_menuitem_l2}.plural").html_safe, user_items_path("q" => params[:q]) %>
       <% end %>
     </h1>
-    <p><%= render :partial => "locations/location", :locals => {:location => @user.location} if @user.location %></p>
+    <%  if logged_in? && @user.location %>
+      <p><%= render :partial => "locations/location", :locals => {:location => @user.location} %></p>
+    <% end %>
     <%= yield %>
   </div>
 </div>
