--- a/app/views/share/_login.html.erb
+++ b/app/views/share/_login.html.erb
@@ -11,11 +11,8 @@
       <%= f.password_field :password %>
     </p>
     <br />
-    <p><%= f.check_box :remember_me %> <%= f.label :remember_me %></p>
+    <p><%= f.check_box :remember_me %><%= f.label t("login.label.remember") %></p>
     
     <div class="formbutton"><%= submit_tag t("login.label.submit") %></div>
   <% end -%>
 </fieldset>
-<p>
- <%# render :partial => "devise/shared/links" %>
-</p>
