--- a/public/stylesheets/global/items.css
+++ b/public/stylesheets/global/items.css
@@ -19,3 +19,20 @@
   text-align:left;
   font-size:85%;
 }
+
+#items-related {
+  
+}                   
+#items-related ul {
+  clear:both;
+  width: 100%;
+  height: 120px;
+}
+                   
+#items-related ul li {
+  width: 30%;
+  float:left;
+  margin-right: 0.5em;
+  border: 1px solid #B8C2B3;
+  background: #D8E0D0;
+}
