--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t("title.register") %></h1>
-<% semantic_form_for @user, :html => {:class => "formular shadowed ui-corner-all"} do |f| %>
-  <%= f.error_messages %>
+<% semantic_form_for @user, :html => {:class => "formular registration shadowed ui-corner-all"} do |f| %>
+  <%= render "share/error_messages", :target => @user %>
   <% f.inputs do %>
     <%= f.input :login, :label => t("register.label.login") %>
     <%= f.input :email, :label => t("register.label.email") %>
@@ -12,8 +12,7 @@
   <% f.buttons do %>
     <%= f.submit t("register.signup") %>
   <% end %>
-<% end %>
+<% end %>   
 <%= render :partial => "devise/shared/links" %>
-  
 
 
