--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,19 +1,21 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Sign in", new_session_path(resource_name) %><br />
-<% end -%>
-
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to t("topnavigation.register"), new_registration_path(resource_name) %><br />
-<% end -%>
-
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
-<% end -%>
-
-<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
-<% end -%>
-
-<%- if devise_mapping.lockable? && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
-<% end -%>
+<ul class="menu horizontal">
+  <%- if controller_name != 'sessions' %>
+    <li class="center"><%= link_to "Sign in", new_session_path(resource_name) %></li>
+  <% end -%>
+  
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <li class="center"><%= link_to t("topnavigation.register"), new_registration_path(resource_name) %></li>
+  <% end -%>
+  
+  <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
+    <li><%= link_to "Forgot your password?", new_password_path(resource_name) %></li>
+  <% end -%>
+  
+  <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+    <li><%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %></li>
+  <% end -%>
+  
+  <%- if devise_mapping.lockable? && controller_name != 'unlocks' %>
+    <li><%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %></li>
+  <% end -%>
+</ul>
