--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -65,7 +65,7 @@
 
 	</script>
 <% end %>
-<% semantic_form_for @item, :html => {:multipart => true} do |f| %>
+<%= semantic_form_for @item, :html => {:multipart => true} do |f| %>
   <%= f.error_messages %>
   <div id="tabs">
     <ul>
@@ -74,13 +74,13 @@
   		<li><a href="#location"><%= t("form.resource.where").html_safe %></a></li>
   		<li><a href="#when"><%= t("form.resource.when").html_safe %></a></li>
   		<li><a href="#images"><%= t("form.resource.images").html_safe %></a></li>
-  		<li><a href="#attachments"><%= t("form.resource.attachments").html_safe %></a></li>
+  		<!-- <li><a href="#attachments"><%= t("form.resource.attachments").html_safe %></a></li> -->
   	</ul>
   	<div id="what" class="tab_content ">
     <%= f.inputs do %>
       <%= f.input :user_id, :as => :hidden, :required => false, :value => current_user.id %>
       <%= f.input :need, :as => :select, :label => t("form.resource.i"), :include_blank => false, :collection => [[t("form.resource.need"), true], [t("form.resource.have"), false]] %>
-      <%= f.input :item_type_id, :as => :select, :label => t("form.resource.a"), :collection => @itemTypes, :include_blank => true %>
+      <%= f.input :item_type_id, :as => :select, :label => t("form.resource.a"), :collection => options_for_select(ItemType.all.map { |i| [I18n.t("#{i.title}.singular").to_s.html_safe ,i.id ] } ), :include_blank => true %>
       <%= f.input :multiple, :required => false %>
       <hr class="divider" />
       <li><%= f.input :title %></li>
@@ -93,10 +93,10 @@
     </div> 
     <div id="how_much" class="tab_content">
       <%= f.inputs do %>
-        <%= f.input :amount, :required => false, :input_html => {:class => "short"}, :as => :numeric %>
-        <%= f.semantic_fields_for :measure do |measure_form| %>
-          <%= measure_form.input :measure, :collection => @measures, :required => false %>
-        <% end %>
+        <%= f.input :amount, :required => false, :input_html => {:class => "short"}, :as => :number %>
+        <%# f.semantic_fields_for :measure do |measure_form| %>
+          <%= f.input :measure_id, :as => :select, :label => t("formtastic.labels.item.measure"), :collection => @measures, :required => false %>
+        <%# end %>
       <% end %>
       <hr class="divider" />
     </div>
@@ -118,7 +118,7 @@
           <%= link_to_add_fields t("images.new").html_safe, f, :images %>
         </div>
       </li> 
-      <% f.semantic_fields_for :images do |image_form| %>
+      <%= f.semantic_fields_for :images do |image_form| %>
         <%  c+= 1
           image = nil || @item.images[c].image if !@item.images[c].image.url.include? "missing"
         %>
@@ -134,14 +134,14 @@
     <% end %>  
       <hr class="divider" />
     </div>
-    <div id="attachments" class="tab_content"> 
+    <div id="attachments" class="tab_content" style="display:none"> 
       <%= f.inputs do %>  
         <% d = -1 %>  
         <li><div class="button new">
            <%= link_to_add_fields t("item_attachments.new").html_safe, f, :item_attachments %>
           </div>
         </li>  
-        <% f.semantic_fields_for :item_attachments do |attachment_form| %>
+        <%= f.semantic_fields_for :item_attachments do |attachment_form| %>
           <% 
             d += 1
             if @item.item_attachments and d < @item.item_attachments.count
@@ -162,7 +162,7 @@
       <% end %>  
        <hr class="divider" />
   </div>
-  <% f.buttons do %>
+  <%= f.buttons do %>
     <%= f.commit_button :label => t("save") %>
   <% end %>
   </div>  
