--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,10 @@
   <!--[if IE 7]><%= stylesheet_link_tag 'formtastic_ie7' %><![endif]-->
   <%= javascript_include_tag :defaults %> 
   <%# javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" %> 
-  <%= javascript_include_tag "jquery.ui.min.js" %> 
   <%= javascript_include_tag "jquery-ui-timepicker-addon.js" %>                                               
   <%= javascript_include_tag "jquery.tokeninput" %>
+  <%= javascript_include_tag "jquery.colorbox" %>
+  <%= stylesheet_link_tag "colorbox.css" %>  
   <%= stylesheet_link_tag "themes/iwyg/jquery.ui.theme.css" %>  
   <%= stylesheet_link_tag "themes/iwyg/jquery-ui-1.8.11.custom.css" %> 
   <%= javascript_include_tag "i18n/jquery-ui-i18n.js" %>
