--- a/app/views/share/_login.html.erb
+++ b/app/views/share/_login.html.erb
@@ -1,4 +1,4 @@
-<fieldset class="formular login shadowed">
+<fieldset class="formular login shadowed ui-corner-all">
   <br/>
   <%= form_for(:user, :url => user_session_path) do |f| -%>
     <p>
