--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,20 @@
-<h1><%= t("title.register") %></h1>
-<% semantic_form_for @user, :html => {:class => "formular registration shadowed ui-corner-all"} do |f| %>
-  <%= render "share/error_messages", :target => @user %>
-  <% f.inputs do %>
-    <%= f.input :login, :label => t("register.label.login") %>
-    <%= f.input :email, :label => t("register.label.email") %>
-    <%= f.input :password, :label => t("register.label.password") %>
-    <%= f.input :password_confirmation, :label => t("register.label.confirmPassword") %>
-    <p><abbr>*</abbr> <%= t("register.mandatoryFields") %></p>
-  <% end %>
-
-  <% f.buttons do %>
-    <%= f.submit t("register.signup") %>
-  <% end %>
-<% end %>   
-<%= render :partial => "devise/shared/links" %>
+<div class="registration">
+  <h1><%= t("title.register") %></h1>
+  <% semantic_form_for @user, :html => {:class => "formular shadowed ui-corner-all"} do |f| %>
+    <%= render "share/error_messages", :target => @user %>
+    <% f.inputs do %>
+      <%= f.input :login, :label => t("register.label.login") %>
+      <%= f.input :email, :label => t("register.label.email") %>
+      <%= f.input :password, :label => t("register.label.password") %>
+      <%= f.input :password_confirmation, :label => t("register.label.confirmPassword") %>
+      <p><abbr>*</abbr> <%= t("register.mandatoryFields") %></p>
+    <% end %>
+  
+    <% f.buttons do %>
+      <%= f.submit t("register.signup") %>
+    <% end %>
+  <% end %>   
+  <%= render :partial => "devise/shared/links" %>
+</div>
 
 
