--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,14 +1,14 @@
-<ul class="menu horizontal">
+<ul class="horizontal links">
   <%- if controller_name != 'sessions' %>
-    <li class="center"><%= link_to "Sign in", new_session_path(resource_name) %></li>
+    <li><%= link_to t("register.signin"), new_session_path(resource_name) %></li>
   <% end -%>
   
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <li class="center"><%= link_to t("topnavigation.register"), new_registration_path(resource_name) %></li>
+    <li><%= link_to t("topnavigation.register"), new_registration_path(resource_name) %></li>
   <% end -%>
   
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-    <li><%= link_to "Forgot your password?", new_password_path(resource_name) %></li>
+    <li><%= link_to t("register.forgotpassword"), new_password_path(resource_name) %></li>
   <% end -%>
   
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
