--- a/app/views/locations/_nested_form.html.erb
+++ b/app/views/locations/_nested_form.html.erb
@@ -1,8 +1,4 @@
-<% content_for :head do %>   
- <%= GMap.header(:hl=> params[:locale]) if @map %>
- <%= @map.to_html if @map %>
-<% end %>
-<%= render "share/map" if @location && @map %>
+<%= render :partial => "share/map", :locals => { :locations => @locations_json } if @locations_json %>
 <%= f.inputs do %>
   <%= f.semantic_fields_for :locations do |location_form| %>
     <%= location_form.input :address, :required => false, :label => t("formtastic.labels.location.address") %>
