--- a/app/views/sent/new.html.erb
+++ b/app/views/sent/new.html.erb
@@ -1,8 +1,8 @@
 <div id="new_message">
-  <% semantic_form_for :message, :url => {:controller => "sent", :action => "create"}, :remote => true do |f| %>
+  <%= semantic_form_for :message, :url => {:controller => "sent", :action => "create"}, :remote => true do |f| %>
     <%= f.error_messages %>
     
-    <% f.inputs do %>
+    <%= f.inputs do %>
      <li>
         <% if params[:to] %>
         <label><%= t("mailbox.to") %></label><%= User.find(params[:to]).login %>
@@ -17,7 +17,7 @@
       <%= f.input :subject, :label => t("mailbox.subject") %>
       <%= f.input :body, :as => :text, :label => t("mailbox.body")  %>
     <% end %>
-    <% f.buttons do %>
+    <%= f.buttons do %>
       <%= f.submit t("submit") %>
     <% end %>
   <% end %>
