--- a/app/views/share/_comments.rhtml
+++ b/app/views/share/_comments.rhtml
@@ -1,17 +1,15 @@
 <% if logged_in? %>
-<%= render :partial => "comments/form", :locals => {:commentable => commentable} %>
-<% end %>
-<% if comments.size > 0 %>
-<div id="comments">
+  <div id="comment-form">
+    <%= render :partial => "comments/form", :locals => {:commentable => commentable} %>
+  </div>
+<% end %>      
+<div id="comments-count">
   <h3><%= t("comments.comments") %> (<%= comments.size %>)</h3>
+</div>   
+<div id="comments">
+<% if comments.size > 0 %>
   <% comments.each do |comment| %> 
-    <div class="comment ui-corner-all">
-      <span class="image"><%= link_to image_tag(tinyThumb(User.find(comment.user_id)), :alt => User.find(comment.user_id).login, :title => User.find(comment.user_id).login), profile_path(User.find(comment.user_id).login) %></span>
-      <div class="description">
-        <span class="date font-smaller"><%=h distance_of_time_in_words(comment.created_at, Time.now) %> <%= t("ago") %></span>   
-        <span class="text font-smaller"><%= simple_format(comment.body) %></span> 
-      </div>
-    </div>
+    <%= render :partial => "comments/comment", :locals => { :comment => comment} %>
   <% end %>
+<% end %>      
 </div>
-<% end %>
