--- a/public/stylesheets/formtastic_changes.css
+++ b/public/stylesheets/formtastic_changes.css
@@ -10,6 +10,8 @@ form.formtastic fieldset ol li p.inline-hints { color:#333; }
 --------------------------------------------------------------------------------------------------*/
 
 .formtastic {
+  margin:0;
+  padding:0;
 }
 .formtastic .check_boxes label {
     text-align: left;
@@ -75,6 +77,7 @@ form.formtastic .date ol {
 .formtastic .buttons {
   width: 100%;            
 	padding-top:0.5em;
+  margin:0;
   background: transparent;
 }
 .formtastic .short {
