--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,7 +1,7 @@
 <div class="list-item <%=h item.itemtype.downcase if item.item_type_id? %> <%=h is_need?(item) %> ui-corner-all">
   <%= render :partial => "items/usermenu", :locals => {:item => item} %>
   <div class="item-type">
-    <%= image_tag "icons/icon_#{item.itemtype.downcase}.png", :title => item.localized_itemtype, :alt => item.localized_itemtype %>
+    <%= image_tag "icons/icon_#{item.itemtype.downcase}.png", :title => item.localized_itemtype.html_safe, :alt => item.localized_itemtype.html_safe %>
   </div>
   <div class="item-status">
     <%= render :partial => "items/itemstatus", :locals => { :item => item } %>    
