--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,26 @@
-<p>Hello <%= @resource.email %>!</p>
-
-<p>Someone has requested a link to change your password, and you can do this through the link below.</p>
-
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+  </head>
+  <body>
+  <% if I18n.locale.to_s == "de" %>
+    <p>Hallo <%= @resource.email %>!</p>
+    <p>Dein Passwort soll ge&auml;ndert werden. Das kannst Du mit einem Klick auf den Link tun. </p>
+    <p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+    <p>Falls Du Dein Passwort nicht &auml;ndern m&ouml;chtest, ignoriere diese Nachricht.<br />
+    Dein Passwort &auml;ndert sich nicht, bis Du diesen Link geklickt und Dein Passwort ge&auml;ndert hast.</p>
+    <p>Dein IWYG Team</p>
+  <% end %>                    
+                                             
+  <% if I18n.locale.to_s == "en" %>
+    <p>Hello <%= @resource.email %>!</p>
+    <p>Someone has requested a link to change your password, and you can do this through the link below.</p>
+    <p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+    <p>If you didn't request this, please ignore this email.<br />
+    Your password won't change until you access the link above and create a new one.</p>
+    <p>Yours IWYG Team</p>
+  <% end %>
+  
+  </body>
+</html>
