--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,17 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource_name, resource, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= f.error_messages %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <p><%= f.label :password %></p>
-  <p><%= f.password_field :password %></p>
-
-  <p><%= f.label :password_confirmation %></p>
-  <p><%= f.password_field :password_confirmation %></p>
-
-  <p><%= f.submit "Change my password" %></p>
-<% end %>
-
-<%= render :partial => "devise/shared/links" %>
+<div class="change_password">
+  <h1><%= t("password.change").html_safe %></h1>
+  
+  <%= semantic_form_for(resource_name, resource, :url => password_path(resource_name), :html => { :method => :put, :class => "formular shadowed ui-corner-all" }) do |f| %>
+    <%= render "share/error_messages", :target => resource %>
+    <%= f.inputs do %>
+      <%= f.input :reset_password_token, :as => :hidden %>
+      <%= f.input :password, :label => t("register.label.password") %>
+      <%= f.input :password_confirmation, :label => t("register.label.confirmPassword") %>
+    <% end %>
+    <%= f.buttons do %>
+      <%= f.submit t("password.change_submit").html_safe %>
+    <% end %>
+  <% end %>
+  
+  <%= render :partial => "devise/shared/links" %>
+</div>
