--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -7,8 +7,8 @@
   <% if I18n.locale.to_s == "de" %>
     <p>Hallo <%= @resource.email %>!</p>
     <p>Dein Passwort soll ge&auml;ndert werden. Das kannst Du mit einem Klick auf den Link tun. </p>
-    <p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
-    <p>Falls Du Dein Passwort nicht &auml;ndern m&ouml;chtest, ignoriere diese Nachricht.<br />
+    <p><%= link_to 'Passwort &auml;ndern', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+    <p>Falls Du Dein Passwort nicht &auml;ndern moechtest, ignoriere diese Nachricht.<br />
     Dein Passwort &auml;ndert sich nicht, bis Du diesen Link geklickt und Dein Passwort ge&auml;ndert hast.</p>
     <p>Dein IWYG Team</p>
   <% end %>                    
