--- a/public/stylesheets/global/mainnavigation.css
+++ b/public/stylesheets/global/mainnavigation.css
@@ -14,6 +14,8 @@
   color:white;
   font-weight:bold;
   text-decoration:none;
+  text-shadow: 1px 0px 1px #CBD6D4;
+filter: dropshadow(color=#CBD6D4, offx=1, offy=0);
 }
 #mainnavigation li {
   padding:0.5em;
@@ -40,10 +42,12 @@
   color: #0B0D14;  
   font-size:12pt;
 }
+/*
 #mainnavigation .menu #resources:hover .submenu {
   display:block !important;
 }
+*/
 #mainnavigation .menu .submenu li {
-  display:block;
-  height:.5em;
+  float: none;
+  height:.5em;       
 }
